--- a/buildconf/alpine.ini
+++ b/buildconf/alpine.ini
@@ -2,5 +2,5 @@
 inherit = base
 main_plugin =
 embedded_plugins = null
-plugin_dir = /usr/lib/uwsgi
+plugin_dir = /usr/local/lib/uwsgi
 plugin_build_dir = .
